feat(blog): add blog layout, MDX renderer, and example post

--- a/app/blog/example-mdx-metadata/page.mdx
+++ b/app/blog/example-mdx-metadata/page.mdx
@@ -9,8 +9,7 @@ You can export a `metadata` object at the top of your MDX file like this:
 ```javascript
 export const metadata = {
   title: 'How to Export Metadata from MDX for Next.js SEO',
-  description:
-    'A guide on exporting metadata from MDX files to leverage Next.js SEO features.',
+  description: 'A guide on exporting metadata from MDX files to leverage Next.js SEO features.',
   authors: [{ name: 'Jane Doe', url: 'https://janedoe.com' }],
   openGraph: {
     images: ['https://cdn.cosmos.so/example-image.jpg'],
