feat(blog): generate blog list from MDX metadata via API; wire homepage to fetch with fallback\n\n- add server utility to scan app/blog MDX and extract metadata\n- add /api/blogposts route (static)\n- homepage uses client fetch with fallback to static BLOG_POSTS\n- remove YAML frontmatter from MDX posts to prevent rendering

--- a/app/blog/test_ruut/page.mdx
+++ b/app/blog/test_ruut/page.mdx
@@ -1,16 +1,14 @@
----
-title: 'My Second Test'
----
-
-
 export const metadata = {
   title: 'My Second Test',
   description: 'My second test file made with mdx',
   alternates: { canonical: '/blog/test_ruut' }
 }
 
+import Link from 'next/link'
+
 # My Second Test - Heading 1
 
+Jump back to the <Link href="/">homepage</Link>.
 
 Whereas disregard and contempt for human rights have resulted. The brown fox jump over the yellow fence. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam cupiditate atque, ullam aliquam excepturi aspernatur aliquid eligendi ex veritatis vel earum consectetur in alias enim illo quia blanditiis similique delectus!
 
