--- a/app/blog/001/page.mdx
+++ b/app/blog/001/page.mdx
@@ -4,32 +4,16 @@ export const metadata = {
   alternates: { canonical: '/blog/001' }
 }
 
+import Link from 'next/link'
+
 # My First Post
 
-This is just a test
+Jump back to the <Link href="/">homepage</Link>.
 
-```jsx
-<ThemeProvider
-  enableSystem={true}
-  attribute="class"
-  storageKey="theme"
-  defaultTheme="system"
->
-  <div className="flex min-h-screen w-full flex-col items-center">
-    <div className="relative mx-auto w-full max-w-screen-sm px-8 pt-12 font-sans">
-      <Header />
-      {children}
-      <Footer />
-    </div>
-  </div>
-</ThemeProvider>;
-```
+Hi there! I'm Simon, the | I'm a co-creater of [svve11](https://github.com/oslabs-beta/Svve11) — _an open-source library of [Svelte](http://svelte.dev/) components focused on web accessibility._
 
-## Header 2
+In my spare time, I like to [climb](https://www.instagram.com/crimpwimp/), [draw](https://www.instagram.com/nomis_heel/), [read](https://www.goodreads.com/user/show/50267865-simon-lee), noodle on the guitar, and [snap photos](https://vsco.co/simonhl/gallery). 
 
-> a random blockquote
+In a past life, I worked as a designer at [Walker Macy](https://www.walkermacy.com/) — _an award-winning landscape architecture and planning firm based in the Pacific Northwest._ 
 
-### And Header 3
-
-- a list item
-- and another
+Want to work with me? Just chat over coffee? Let's get in touch!
