chore: include additional cleanup changes
- Remove unused contact form components (dialog, inline, modal)
- Remove unused UI components (dialog, morphing-dialog, spotlight)
- Remove test blog posts (hello-mdx, test_ruut)
- Remove unused utility functions from lib/utils.ts
- Clean up unused imports and code from various files
- Update sitemap and footer to remove unused code

--- a/app/blog/001/page.mdx
+++ b/app/blog/001/page.mdx
@@ -1,12 +1,12 @@
 export const metadata = {
-  title: 'My First Post',
-  description: 'My first file made with mdx',
+  title: 'Test Post',
+  description: 'A test blog post made with mdx',
   alternates: { canonical: '/blog/001' }
 }
 
 import Link from 'next/link'
 
-# My First Post
+# Test Post
 
 Jump back to the <Link href="/">homepage</Link>.
 
